--- a/DjangoPop/ads/templates/ads/home.html
+++ b/DjangoPop/ads/templates/ads/home.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Django Pop</title>
-    <style>
-        .ad { display: inline-block }
-        .ad img { height: 250px }
-        .ad strong { display: block }
-    </style>
-</head>
-<body>
-    <h1>Django POP</h1>
+{% extends "base.html" %}
+
+{% block "main_title" %} DjangoPOP {% endblock %}
+
+{% block "main_body" %}
+
     <p>Sell everything that you don't need!</p>
     <hr>
     {% for ad in ads %}
@@ -21,5 +14,7 @@
             sold by {{ ad.owner.first_name }} {{ ad.owner.last_name }}
         </a>
     {% endfor %}
-</body>
-</html>
+
+{% endblock %}
+
+
