--- a/DjangoPop/ads/templates/ads/ad_detail.html
+++ b/DjangoPop/ads/templates/ads/ad_detail.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
-{% block "head_title" %} {{ ad.name }} {% endblock %}
-{% block "main_title" %} {{ ad.name }} {% endblock %}
-{% block "main_body" %}
+{% block head_title %} {{ ad.name }} {% endblock %}
+{% block main_title %} {{ ad.name }} {% endblock %}
+{% block main_body %}
 
 <p>{{ ad.description }}</p>
     <div>
