--- a/DjangoPop/ads/templates/ads/home.html
+++ b/DjangoPop/ads/templates/ads/home.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block "main_title" %} DjangoPOP {% endblock %}
+{% block main_title %} DjangoPOP {% endblock %}
 
-{% block "main_body" %}
+{% block main_body %}
 
     <p>Sell everything that you don't need!</p>
     <hr>
