--- a/DjangoPop/ui/templates/base.html
+++ b/DjangoPop/ui/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block "head_title" %} Django POP {% endblock %}</title>
+    <title>{% block head_title %} Django POP {% endblock %}</title>
     <style>
         .ad { display: inline-block }
         .ad img { height: 250px }
@@ -17,10 +17,10 @@
 
     <hr>
 
-    <h1>{% block "main_title" %} {% endblock %}</h1>
+    <h1>{% block main_title %} {% endblock %}</h1>
 
     <main>
-        {% block "main_body" %} {% endblock %}
+        {% block main_body %} {% endblock %}
     </main>
 
     <footer>
