Añadiendo archivos estaticos

--- a/DjangoPop/ui/templates/base.html
+++ b/DjangoPop/ui/templates/base.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block head_title %} Django POP {% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <style>
         .ad { display: inline-block }
         .ad img { height: 250px }
